Refactor navbar and container styles

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
                 
                     <ul class="nav-list">
                         
-                        <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link active" data-navbar-link><i
-                                    class="fa-sharp fa-solid fa-house-chimney"></i> Home</a>
+                        <li class="navbar-list-item active">
+                            <div>
+                                <a href="#home" class="navbar-link active" data-navbar-link><i
+                                        class="fa-sharp fa-solid fa-house-chimney"></i> Home</a>
+                            </div>
                         </li>
                         <li class="navbar-list-item">
                             <a href="#home" class="navbar-link" data-navbar-link><i
