Update brand logo image source

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="logo">
-                    <img class="brand" src="kof2.png" alt="">
+                    <img class="brand" src="brand.png" alt="">
                 </div>
 
                 <div class="phone-icon">
