Update links and buttons in index.html

--- a/index.html
+++ b/index.html
@@ -42,18 +42,24 @@
 
                 <!-- Book Right -->
                 <div class="book-icon">
-                    <i class="fa-regular fa-calendar-plus"></i>
+                    <a href="https://getsquire.com/booking/brands/king-of-cuts"><i class="fa-regular fa-calendar-plus"></i></a>
                 </div>
 
                 <!-- Header Button One -->
-                <button class="header-btn btn-2">
-                    Call Us Now!
-                </button>
+                    <a href="" id="order">
+                        <button  class="header-btn btn-2">
+                            Call Us Now!
+                        </button>
+                    </a>
+               
 
                 <!-- Header Button Two -->
-                <button class="header-btn ">
-                    Book Now!
-                </button>
+                    <a href="">
+                        <button class="header-btn">
+                            Book Now!
+                        </button>
+                    </a>
+                
 
             </div>
 
@@ -127,19 +133,15 @@
     </header>
 
     <main>
-        <div class="section-wrapper container">
-            <section class="class 1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius dolores ea beatae? Voluptates
-                aliquam excepturi quo eaque dolorem enim deserunt ipsa vitae reprehenderit iusto, totam dolores,
-                necessitatibus error porro?
-            </section>
-            <section class="class 2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius dolores ea
-                beatae? Voluptates aliquam excepturi quo eaque dolorem enim deserunt ipsa vitae reprehenderit iusto,
-                totam dolores, necessitatibus error porro?</section>
-            <section class="class 3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius dolores ea
-                beatae? Voluptates aliquam excepturi quo eaque dolorem enim deserunt ipsa vitae reprehenderit iusto,
-                totam dolores, necessitatibus error porro?</section>
-        </div>
+
+        <section class="hero">
+
+            <button class="hero-btn">Book Now</button>
+
+        </section>
+
+  
+
     </main>
 
     <footer>
@@ -258,7 +260,8 @@
 
         </div>
     </footer>
-
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3op7aEsmAn4WFXpJoVj9n1GYCvc7cWC4&callback=console.debug&libraries=maps,marker&v=beta">
+    </script>
     <script src="assets/js/script.js"></script>
 </body>
 
