Update image and script references

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
                 <!-- Book Right -->
                 <div class="book-icon">
-                    <a href="https://getsquire.com/booking/brands/king-of-cuts"><i class="fa-regular fa-calendar-plus"></i></a>
+                    <a href="https://getsquire.com/booking/brands/king-of-cuts">
+                        <i class="fa-regular fa-calendar-plus"></i>
+                    </a>
                 </div>
 
                 <!-- Header Button One -->
@@ -260,8 +262,7 @@
 
         </div>
     </footer>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3op7aEsmAn4WFXpJoVj9n1GYCvc7cWC4&callback=console.debug&libraries=maps,marker&v=beta">
-    </script>
+  
     <script src="assets/js/script.js"></script>
 </body>
 
