--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <!-- Header Button One -->
-                    <a href="" id="order">
+                    <a href="https://www.google.com/search?q=01904900159&oq=01904900159&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzU4M2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8" id="order">
                         <button  class="header-btn btn-2">
                             Call Us Now!
                         </button>
@@ -56,7 +56,7 @@
                
 
                 <!-- Header Button Two -->
-                    <a href="">
+                    <a href="https://getsquire.com/booking/brands/king-of-cuts">
                         <button class="header-btn">
                             Book Now!
                         </button>
@@ -138,7 +138,7 @@
 
         <section class="hero">
 
-            <button class="hero-btn">Book Now</button>
+            <a href="https://getsquire.com/booking/brands/king-of-cuts"><button class="hero-btn">Book Now</button></a>
 
         </section>
 
