Fix typo in copyright notice

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </ul>
 
                 <p class="text-muted">
-                    Copyright © 2024 King Of Cuts, Male Babour Salon
+                    Copyright © 2024 King Of Cuts, Male Barber Salon
                     <br>
                     All Rights Reserved
                     <br> </p>
