Update footer links

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="footer-section">
                 <h2 class="h2-footer-title-lg">READY TO FEEL A BRAND NEW MAN?</h2>
 
-                <button class="footer-btn">Get booked in! <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                <a href="https://getsquire.com/booking/brands/king-of-cuts"><button class="footer-btn">Get booked in! <i class="fa-sharp fa-solid fa-arrow-right"></i></button></a>
 
                 <div class="king-overlay"></div>
             </div>
@@ -163,18 +163,18 @@
                 <div class="grid-item">
                     <h2 class="h2-footer-title">Legal</h2>
                     <ul>
-                        <li class="pt-3 text-muted">Accessibility</li>
-                        <li class="pt-3 text-muted">Terms of service</li>
-                        <li class="pt-3 text-muted">Privary & Cookies</li>
+                        <li class="pt-3 text-muted"><a href="">Accessibility</a></li>
+                        <li class="pt-3 text-muted"><a href="">Terms of service</a></li>
+                        <li class="pt-3 text-muted"><a href="">Privary & Cookies</a></li>
                     </ul>
                 </div>
 
                 <div class="grid-item">
                     <h2 class="h2-footer-title">King Of Cuts</h2>
                     <ul>
-                        <li class="pt-3 text-muted">Careers</li>
-                        <li class="pt-3 text-muted">Complaints</li>
-                        <li class="pt-3 text-muted">Private Party</li>
+                        <li class="pt-3 text-muted"><a href="">Careers</a></li>
+                        <li class="pt-3 text-muted"><a href="">Complaints</a></li>
+                        <li class="pt-3 text-muted"><a href="">Private Party</a></li>
                     </ul>
                 </div>
 
@@ -192,9 +192,9 @@
                 <div class="grid-item">
                     <h2 class="h2-footer-title">Just Eat</h2>
                     <ul>
-                        <li class="pt-3 text-muted">Complaints</li>
-                        <li class="pt-3 text-muted">Partnership</li>
-                        <li class="pt-3 text-muted">JustEat.co.uk</li>
+                        <li class="pt-3 text-muted"><a href="">Complaints</a></li>
+                        <li class="pt-3 text-muted"><a href="">Partnership</a></li>
+                        <li class="pt-3 text-muted"><a href="">JustEat.co.uk</a></li>
 
 
 
@@ -225,25 +225,25 @@
                 <ul class="footer-icons">
 
                     <li>
-                        <a href="">
+                        <a href="https://www.facebook.com/profile.php?id=100086337637062&locale2=hi_IN&paipv=0&eav=AfYUQsY-R-zxnZHCdMFUS6B-ex18YKufH1Lsf21F7xyLkwJqidhVS9sLU27h346QZKg&_rdr" target="_blank" >
                             <i class="fa-brands fa-square-facebook"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="https://www.instagram.com/_kingofcuts_/?hl=en-gb" target="_blank" >
                             <i class="fa-brands fa-square-instagram"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="https://www.snapchat.com/add/kotc_official?web_client_id=cd5fe44d-0e40-4a38-8c5c-246f6e172e18" target="_blank" >
                             <i class="fa-brands fa-square-snapchat"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="https://github.com/CodeLegg" target="_blank" >
                             <i class="fa-brands fa-square-github"></i>
                         </a>
                     </li>
