Add new HTML files and update links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <!-- Header Button One -->
-                    <a href="https://www.google.com/search?q=01904900159&oq=01904900159&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzU4M2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8" class="buttons" id="order">
+                    <a href="https://www.google.com/search?q=01904900159&oq=01904900159&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzU4M2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8" class="buttons" id="order" target="_blank">
                         <button  class="header-btn btn-2">
                             Call Us Now!
                         </button>
@@ -56,7 +56,7 @@
                
 
                 <!-- Header Button Two -->
-                    <a href="https://getsquire.com/booking/brands/king-of-cuts" class="buttons">
+                    <a href="https://getsquire.com/booking/brands/king-of-cuts" class="buttons" target="_blank">
                         <button class="header-btn">
                             Book Now!
                         </button>
@@ -89,37 +89,37 @@
                         </li>
 
                         <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link" data-navbar-link>
+                            <a href="about.html" class="navbar-link" data-navbar-link>
                                 <i class="fa-sharp fa-solid fa-circle-info"></i> About
                             </a>
                         </li>
 
                         <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link" data-navbar-link>
+                            <a href="services.html" class="navbar-link" data-navbar-link>
                                 <i class="fa-sharp fa-solid fa-scissors"></i> Services
                             </a>
                         </li>
 
                         <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link" data-navbar-link>
+                            <a href="location.html" class="navbar-link" data-navbar-link>
                                 <i class="fa-sharp fa-solid fa-location-dot"></i> Location
                             </a>
                         </li>
 
                         <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link" data-navbar-link>
+                            <a href="contact-us.html" class="navbar-link" data-navbar-link>
                                 <i class="fa-sharp fa-solid fa-address-book"></i> Contact Us
                             </a>
                         </li>
 
                         <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link" data-navbar-link>
+                            <a href="lounge-bar.html" class="navbar-link" data-navbar-link>
                                 <i class="fa-sharp fa-solid fa-martini-glass-citrus"></i> Lounge & Bar
                             </a>
                         </li>
 
                         <li class="navbar-list-item">
-                            <a href="#home" class="navbar-link" data-navbar-link>
+                            <a href="careers.html" class="navbar-link" data-navbar-link>
                                 <i class="fa-solid fa-handshake"></i> Careers
                             </a>
                         </li>
@@ -138,7 +138,7 @@
 
         <section class="hero">
 
-            <a href="https://getsquire.com/booking/brands/king-of-cuts"><button class="hero-btn">Book Now</button></a>
+            <a href="https://getsquire.com/booking/brands/king-of-cuts" target="_blank"><button class="hero-btn">Book Now</button></a>
 
         </section>
 
@@ -163,18 +163,18 @@
                 <div class="grid-item">
                     <h2 class="h2-footer-title">Legal</h2>
                     <ul>
-                        <li class="pt-3 text-muted"><a href="">Accessibility</a></li>
-                        <li class="pt-3 text-muted"><a href="">Terms of service</a></li>
-                        <li class="pt-3 text-muted"><a href="">Privary & Cookies</a></li>
+                        <li class="pt-3 text-muted"><a href="accessibility.html">Accessibility</a></li>
+                        <li class="pt-3 text-muted"><a href="terms-services.html">Terms of service</a></li>
+                        <li class="pt-3 text-muted"><a href="privacy-cookies.html">Privary & Cookies</a></li>
                     </ul>
                 </div>
 
                 <div class="grid-item">
                     <h2 class="h2-footer-title">King Of Cuts</h2>
                     <ul>
-                        <li class="pt-3 text-muted"><a href="">Careers</a></li>
-                        <li class="pt-3 text-muted"><a href="">Complaints</a></li>
-                        <li class="pt-3 text-muted"><a href="">Private Party</a></li>
+                        <li class="pt-3 text-muted"><a href="careers.html">Careers</a></li>
+                        <li class="pt-3 text-muted"><a href="complaints.html">Complaints</a></li>
+                        <li class="pt-3 text-muted"><a href="private-party.html">Private Party</a></li>
                     </ul>
                 </div>
 
@@ -183,7 +183,7 @@
                     <ul>
                         <li class="pt-3 text-muted"><a href="https://www.instagram.com/getsquire/"
                                 target="_blank">Instagram</a></li>
-                        <li class="pt-3 text-muted"><a href="">Partnership</a></li>
+                        <li class="pt-3 text-muted"><a href="partnership.html">Partnership</a></li>
                         <li class="pt-3 text-muted"><a href="https://www.instagram.com/getsquire/" target="_blank">Their
                                 Website</a></li>
                     </ul>
@@ -193,7 +193,7 @@
                     <h2 class="h2-footer-title">Just Eat</h2>
                     <ul>
                         <li class="pt-3 text-muted"><a href="">Complaints</a></li>
-                        <li class="pt-3 text-muted"><a href="">Partnership</a></li>
+                        <li class="pt-3 text-muted"><a href="partnershipJE.html">Partnership</a></li>
                         <li class="pt-3 text-muted"><a href="">JustEat.co.uk</a></li>
 
 
