Add new video images, Add hero section, add styles, animations

--- a/index.html
+++ b/index.html
@@ -41,27 +41,29 @@
                 </div>
 
                 <!-- Book Right -->
-                <div class="book-icon">
-                    <a href="https://getsquire.com/booking/brands/king-of-cuts">
-                        <i class="fa-regular fa-calendar-plus"></i>
-                    </a>
-                </div>
+                <a class="book-icon" href="https://getsquire.com/booking/brands/king-of-cuts">
+                    <div>
 
+                        <i class="fa-regular fa-calendar-plus"></i>
+
+                    </div>
+                </a>
                 <!-- Header Button One -->
-                    <a href="https://www.google.com/search?q=01904900159&oq=01904900159&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzU4M2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8" class="buttons" id="order" target="_blank">
-                        <button  class="header-btn btn-2">
-                            Call Us Now!
-                        </button>
-                    </a>
-               
+                <a href="https://www.google.com/search?q=01904900159&oq=01904900159&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzU4M2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8"
+                    class="buttons" id="order" target="_blank">
+                    <button class="header-btn btn-2">
+                        Call Us Now!
+                    </button>
+                </a>
+
 
                 <!-- Header Button Two -->
-                    <a href="https://getsquire.com/booking/brands/king-of-cuts" class="buttons" target="_blank">
-                        <button class="header-btn">
-                            Book Now!
-                        </button>
-                    </a>
-                
+                <a href="https://getsquire.com/booking/brands/king-of-cuts" class="buttons" target="_blank">
+                    <button class="header-btn">
+                        Book Now!
+                    </button>
+                </a>
+
 
             </div>
 
@@ -135,15 +137,184 @@
     </header>
 
     <main>
+        <section class="carousel next">
 
-        <section class="hero">
+            <!-- list -->
+            <div class="list">
 
-            <a href="https://getsquire.com/booking/brands/king-of-cuts" target="_blank"><button class="hero-btn">Book Now</button></a>
+                <!-- list item -->
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-1.png" alt="" />
+                    <div class="content">
+                        <div class="content-container">
+                            <div class="title">KING OF CUTS</div>
+                            <div class="sub-title">
+                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
+                            <br>
+                            <a href="">
+                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
+                            </a>
+                            <div class="des">
+                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
+                                Our
+                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
+                            </div>
+                            <br>
+                            <div class="carousel-cta-btn">
+                                <button class="btn">Book Now</button>
+                                <button class="btn-2">Watch Video</button>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
+
+                <!-- list item -->
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-2.png" alt="" />
+                    <div class="content">
+                        <div class="content-container">
+                            <div class="title">KING OF CUTS</div>
+                            <div class="sub-title">
+                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
+                            <br>
+                            <a href="">
+                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
+                            </a>
+                            <div class="des">
+                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
+                                Our
+                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
+                            </div>
+                            <br>
+                            <div class="carousel-cta-btn">
+                                <button class="btn">Book Now</button>
+                                <button class="btn-2">Watch Video</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- list item -->
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-3.png" alt="" />
+                    <div class="content">
+                        <div class="content-container">
+                            <div class="title">KING OF CUTS</div>
+                            <div class="sub-title">
+                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
+                            <br>
+                            <a href="">
+                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
+                            </a>
+                            <div class="des">
+                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
+                                Our
+                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
+                            </div>
+                            <br>
+                            <div class="carousel-cta-btn">
+                                <button class="btn">Book Now</button>
+                                <button class="btn-2">Watch Video</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- list item -->
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-4.png" alt="" />
+                    <div class="content">
+                        <div class="content-container">
+                            <div class="title">KING OF CUTS</div>
+                            <div class="sub-title">
+                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
+                            <br>
+                            <a href="">
+                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
+                            </a>
+                            <div class="des">
+                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
+                                Our
+                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
+                            </div>
+                            <br>
+                            <div class="carousel-cta-btn">
+                                <button class="btn">Book Now</button>
+                                <button class="btn-2">Watch Video</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+
+            </div>
+
+            <!-- thumbnail -->
+            <div class="thumbnail">
+
+
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-2.png" alt="">
+                    <div class="content">
+                        <div class="title">
+                            Osbaldwick SHOP
+                        </div>
+                        <div class="des">
+                            CLICK HERE
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-3.bmp" alt="">
+                    <div class="content">
+                        <div class="title">
+                            FISHERGATE SHOP
+                        </div>
+                        <div class="des">
+                            CLICK HERE
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="assets/images/Video-Images/KOC-4.bmp" alt="">
+                    <div class="content">
+                        <div class="title">
+                            PRIVATE EVENTS
+                        </div>
+                        <div class="des">
+                            CLICK HERE
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img class="img1" src="assets/images/Video-Images/KOC-1.png" alt="">
+                    <div class="content">
+                        <div class="title">
+                            SELBY
+                            SHOP
+                        </div>
+                        <div class="des">
+                            CLICK HERE
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="arrows">
+                <div class="button" id="prev"><</div> 
+                <div class="button" id="next">></div>
+            </div>
+
+            <div class="time"></div>
         </section>
-
-  
-
     </main>
 
     <footer>
@@ -152,7 +323,8 @@
             <div class="footer-section">
                 <h2 class="h2-footer-title-lg">READY TO FEEL A BRAND NEW MAN?</h2>
 
-                <a href="https://getsquire.com/booking/brands/king-of-cuts"><button class="footer-btn">Get booked in! <i class="fa-sharp fa-solid fa-arrow-right"></i></button></a>
+                <a href="https://getsquire.com/booking/brands/king-of-cuts"><button class="footer-btn">Get booked in! <i
+                            class="fa-sharp fa-solid fa-arrow-right"></i></button></a>
 
                 <div class="king-overlay"></div>
             </div>
@@ -161,7 +333,7 @@
 
             <div class="footer-section grid-container">
                 <div class="grid-item">
-                    <h2 class="h2-footer-title">Legal</h2>
+                    <h2 class="h2-footer-title h2-after-1">Legal</h2>
                     <ul>
                         <li class="pt-3 text-muted"><a href="accessibility.html">Accessibility</a></li>
                         <li class="pt-3 text-muted"><a href="terms-services.html">Terms of service</a></li>
@@ -170,7 +342,7 @@
                 </div>
 
                 <div class="grid-item">
-                    <h2 class="h2-footer-title">King Of Cuts</h2>
+                    <h2 class="h2-footer-title h2-after-2">King Of Cuts</h2>
                     <ul>
                         <li class="pt-3 text-muted"><a href="careers.html">Careers</a></li>
                         <li class="pt-3 text-muted"><a href="complaints.html">Complaints</a></li>
@@ -179,7 +351,7 @@
                 </div>
 
                 <div class="grid-item">
-                    <h2 class="h2-footer-title">Squire</h2>
+                    <h2 class="h2-footer-title h2-after-3">Squire</h2>
                     <ul>
                         <li class="pt-3 text-muted"><a href="https://www.instagram.com/getsquire/"
                                 target="_blank">Instagram</a></li>
@@ -190,7 +362,7 @@
                 </div>
 
                 <div class="grid-item">
-                    <h2 class="h2-footer-title">Just Eat</h2>
+                    <h2 class="h2-footer-title h2-after-4">Just Eat</h2>
                     <ul>
                         <li class="pt-3 text-muted"><a href="">Complaints</a></li>
                         <li class="pt-3 text-muted"><a href="partnershipJE.html">Partnership</a></li>
@@ -225,25 +397,27 @@
                 <ul class="footer-icons">
 
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100086337637062&locale2=hi_IN&paipv=0&eav=AfYUQsY-R-zxnZHCdMFUS6B-ex18YKufH1Lsf21F7xyLkwJqidhVS9sLU27h346QZKg&_rdr" target="_blank" >
+                        <a href="https://www.facebook.com/profile.php?id=100086337637062&locale2=hi_IN&paipv=0&eav=AfYUQsY-R-zxnZHCdMFUS6B-ex18YKufH1Lsf21F7xyLkwJqidhVS9sLU27h346QZKg&_rdr"
+                            target="_blank">
                             <i class="fa-brands fa-square-facebook"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://www.instagram.com/_kingofcuts_/?hl=en-gb" target="_blank" >
+                        <a href="https://www.instagram.com/_kingofcuts_/?hl=en-gb" target="_blank">
                             <i class="fa-brands fa-square-instagram"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://www.snapchat.com/add/kotc_official?web_client_id=cd5fe44d-0e40-4a38-8c5c-246f6e172e18" target="_blank" >
+                        <a href="https://www.snapchat.com/add/kotc_official?web_client_id=cd5fe44d-0e40-4a38-8c5c-246f6e172e18"
+                            target="_blank">
                             <i class="fa-brands fa-square-snapchat"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/CodeLegg" target="_blank" >
+                        <a href="https://github.com/CodeLegg" target="_blank">
                             <i class="fa-brands fa-square-github"></i>
                         </a>
                     </li>
@@ -262,7 +436,7 @@
 
         </div>
     </footer>
-  
+
     <script src="assets/js/script.js"></script>
 </body>
 
