Add carousel slider functionality

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </header>
 
     <main>
-        <section class="carousel next">
+        <section class="carousel">
 
             <!-- list -->
             <div class="list">
@@ -198,7 +198,7 @@
 
                 <!-- list item -->
                 <div class="item">
-                    <img src="assets/images/Video-Images/KOC-3.png" alt="" />
+                    <img src="assets/images/Video-Images/KOC-3.bmp" alt="" />
                     <div class="content">
                         <div class="content-container">
                             <div class="title">KING OF CUTS</div>
@@ -225,7 +225,7 @@
 
                 <!-- list item -->
                 <div class="item">
-                    <img src="assets/images/Video-Images/KOC-4.png" alt="" />
+                    <img src="assets/images/Video-Images/KOC-4.bmp" alt="" />
                     <div class="content">
                         <div class="content-container">
                             <div class="title">KING OF CUTS</div>
@@ -255,54 +255,51 @@
             </div>
 
             <!-- thumbnail -->
-            <div class="thumbnail">
-
-
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-2.png" alt="">
-                    <div class="content">
-                        <div class="title">
-                            Osbaldwick SHOP
-                        </div>
-                        <div class="des">
-                            CLICK HERE
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-3.bmp" alt="">
-                    <div class="content">
-                        <div class="title">
-                            FISHERGATE SHOP
-                        </div>
-                        <div class="des">
-                            CLICK HERE
+            <div class="thumbnail-container">
+                <div class="thumbnail">
+                    <div class="item">
+                        <img src="assets/images/Video-Images/KOC-2.png" alt="">
+                        <div class="content">
+                            <div class="title">
+                                Osbaldwick SHOP
+                            </div>
+                            <div class="des">
+                                CLICK HERE
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-4.bmp" alt="">
-                    <div class="content">
-                        <div class="title">
-                            PRIVATE EVENTS
-                        </div>
-                        <div class="des">
-                            CLICK HERE
+                    <div class="item">
+                        <img src="assets/images/Video-Images/KOC-3.bmp" alt="">
+                        <div class="content">
+                            <div class="title">
+                                FISHERGATE SHOP
+                            </div>
+                            <div class="des">
+                                CLICK HERE
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="item">
-                    <img class="img1" src="assets/images/Video-Images/KOC-1.png" alt="">
-                    <div class="content">
-                        <div class="title">
-                            SELBY
-                            SHOP
+                    <div class="item">
+                        <img src="assets/images/Video-Images/KOC-4.bmp" alt="">
+                        <div class="content">
+                            <div class="title">
+                                PRIVATE EVENTS
+                            </div>
+                            <div class="des">
+                                CLICK HERE
+                            </div>
                         </div>
-                        <div class="des">
-                            CLICK HERE
+                    </div>
+                    <div class="item">
+                        <img class="img1" src="assets/images/Video-Images/KOC-1.png" alt="">
+                        <div class="content">
+                            <div class="title">
+                                SELBY
+                                SHOP
+                            </div>
+                            <div class="des">
+                                CLICK HERE
+                            </div>
                         </div>
                     </div>
                 </div>
