--- a/index.html
+++ b/index.html
@@ -306,8 +306,9 @@
             </div>
 
             <div class="arrows">
-                <div class="button" id="prev"><</div> 
-                <div class="button" id="next">></div>
+                <div class="button" id="prev">
+                    <</div> <div class="button" id="next">>
+                </div>
             </div>
 
             <div class="time"></div>
